# geo

./: CMakeLists.txt
geogenerator/: CMakeLists.txt  main.cpp
include/geo/: generator.h  geo.h  geomath.h  location.h
src/: generator.cpp  geomath.cpp  location.cpp
test/: CMakeLists.txt  test.cpp
